--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	Demo URI: http://verticooltheme.tumblr.com/
 	Description: A Cool Minimalist Portfolio Theme.
 	Version: 1.0
-	Author: momororo
-	Author URI: http://verticooltheme.tumblr.com/
+	Author: MOMORORO
+	Author URI: http://teammomororo.tumblr.com
 
 	-->
 
