--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	(-_-) (•ᴗ•)
 
 	Theme Name: Verticool
-	Demo URI: http://verticooltheme.tumblr.com/
+	Demo URI: http://verticooltheme.tumblr.com
 	Description: A Cool Minimalist Portfolio Theme.
 	Version: 1.0
 	Author: MOMORORO
